# basic_dapr_usage

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  supervisor.conf
backend/: main.py  pyproject.toml  requirements.txt
backend/src/: main.py
ui/: README.md  package-lock.json  package.json  quasar.config.js
ui/src/css/: app.scss
ui/src/pages/: IndexPage.vue
