[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dapr==1.15.0",
    "dapr-client==0.4.0b1",
    "dapr-ext-fastapi==1.15.0",
    "fastapi==0.115.12",
    "flask==3.1.0",
    "frozenlist==1.5.0",
    "googleapis-common-protos==1.69.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "multidict==6.2.0",
    "propcache==0.3.0",
    "protobuf==5.29.4",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "werkzeug==3.1.3",
    "yarl==1.18.3",
]
